# Architect-DAGent

./: .gitignore  README.md
dagent-backend/: README.md  dag_data.json  pyproject.toml
dagent-backend/Tool_JSON/: add_3_numbers.json  add_two_nums.json  multiply_2_numbers.json  multiply_two_numbers.json  multiply_two_nums.json
dagent-backend/src/: dag_storage.py
dagent-backend/src/dagent_backend/: __init__.py  app.py
dagent-backend/src/dagent_backend/dynamic_modules/: add_3_numbers_node.py  add_two_nums_node.py  entry_node.py  final_output_node.py  multiply_2_numbers_node.py  multiply_two_nums_node.py  return_final_output_node.py  return_input_node.py  testfunc_node.py
dagent-frontend/: package-lock.json  package.json
dagent-frontend/src/: App.jsx  index.css
dagent-frontend/src/components/: ConnectionForm.jsx  DAGVisualization.jsx  LinkNodesForm.jsx  NodeForm.jsx
