[project]
name = "dagent-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ParthSareen", email = "psareen@uwaterloo.ca" }
]
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "dagent>=0.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dagent_backend"]
